terraform/terraform-workspace/terraform-workspace-variable/security_group.tf
resource "aws_security_group" "webserver-instance-sg" {
  name = "security-group-${terraform.workspace}"
  description = "Allow httpd and SSH port"

#inbound rules
  ingress {
    protocol  = "tcp"
    from_port = 22
    to_port   = 22
    cidr_blocks = ["0.0.0.0/0"]
  }

#inbound rules
  ingress {
    protocol  = "tcp"
    from_port = 80
    to_port   = 80
    cidr_blocks = ["0.0.0.0/0"]
  }

#outbound rules
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
